syntax = "proto3";

package LiquidRpc;

service GameAdapter {
    rpc Command (ReqCmd) returns (RespCmd) {
    }
}

message ReqCmd {
    string UserID = 1;
    string Platform = 2;
    string CmdId = 3;
    string CmdName = 4;
    bytes CmdData = 5;
    bool Direct = 6;
}

message RespCmd {
    bytes CmdData = 1;
}